# transcendence

./: .gitignore  API_DOC.md  Makefile  README.md
src/: .env.example  docker-compose.yml  prometheus.yml
src/backend/: Dockerfile  README.md  package.json
src/backend/src/: app.controller.ts  app.module.ts  main.ts
src/backend/src/service/: friend.ts  user.ts
src/database/: Dockerfile  schema.sql
src/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/api/: api.auth.ts  api.friend.ts  api.message.ts  api.service.ts  api.user.ts
src/frontend/src/components/: Avatar.tsx  LoadingSpinner.tsx  Modal.tsx  PageWrapper.tsx
src/frontend/src/context/: FriendFocusedContext.tsx  FriendListContext.tsx  LoginContext.tsx  MessageContext.tsx  (+4 more)
src/grafana/dashboards/: my_dashboard.json
src/nginx/: Dockerfile
src/nginx/conf/: nginx.conf
src/prometheus/: alert_rules.yml  prometheus.yml
srcs/backend/: package-lock.json
srcs/backend/src/: app.controller.ts  app.module.ts
srcs/frontend/: .gitignore  package-lock.json  package.json
unicord_api/: README.md  pyproject.toml
unicord_api/examples/: add_friend.py  delete_message.py  edit_user.py  get_friends.py  get_me.py  get_messages.py  get_user.py  remove_friend.py  send_message.py
unicord_api/unicord/: __init__.py  client.py  exceptions.py
unicord_api/unicord/mixin/: __init__.py  friend.py  message.py  session.py  user.py
unicord_api/unicord/model/: __init__.py  enum.py  friend.py  message.py  proxy.py  user.py
(+71 files in other folders)
