[project]
name = "unicord"
version = "0.0.1"
description = "Official client for Unicord API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

authors = [
  {name = "Etienne HODE", email = "hode.etienne@gmail.com"}
]
maintainers = [
  {name = "Etienne HODE", email = "hode.etienne@gmail.com"}
]

dependencies = [
  "requests==2.32.3"
]

keywords = ["unicord", "wrapper", "api"]

[project.urls]
Homepage = "https://github.com/etienne-hd/transcendence/tree/main/unicord_api"
Repository = "https://github.com/etienne-hd/transcendence/tree/main/unicord_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"